Feature: ability to revoke member access
